feat: switch to OpenAI comptaible REST API and use MCP interface for skills (#49)
